[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Effects/Fire.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Effects/Flame.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Lightmaps/CircleLightmap.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fire"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.47108, 10.4922 )

[node name="Fire" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 0, 23 )
texture = ExtResource( 2 )
vframes = 3
hframes = 4
frame = 11

[node name="Animation" type="AnimationPlayer" parent="Sprite"]
anims/fire = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.628044, 21.686 )
shape = SubResource( 2 )

[node name="DamageTimer" type="Timer" parent="."]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 26.8221 )
texture = ExtResource( 3 )
color = Color( 0.949219, 0.782045, 0.211349, 1 )
[connection signal="body_entered" from="." to="." method="_on_Fire_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Fire_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
